--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "palifenlauncher",
-  "version": "1.0.1-alpha.1",
+  "version": "1.0.0",
   "productName": "Palifen Launcher",
   "description": "Modded Minecraft Launcher",
   "author": "Palifen (https://github.com/Palifen)",
