--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "palifenlauncher",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "productName": "Palifen Launcher",
-  "description": "Modded Minecraft Launcher",
+  "description": "Le launcher de Palifen et de Nafalis",
   "author": "Palifen (https://github.com/Palifen)",
   "license": "UNLICENSED",
   "homepage": "https://palifen.fr",
