--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "palifenlauncher",
-  "version": "1.0.4",
+  "version": "1.0.5-alpha.1",
   "productName": "Palifen Launcher",
   "description": "Le launcher de Palifen et de Nafalis",
   "author": "Palifen (https://github.com/Palifen)",
