--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Build
 on:
   push:
     branches:
-      - "*"
+      - "master"
 jobs:
   build-linux:
     runs-on: ubuntu-latest
@@ -17,7 +17,7 @@ jobs:
       - name: Build
         run: npm run dist:linux
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: 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
   build-windows:
     runs-on: windows-latest
     name: Build for Windows
@@ -31,18 +31,4 @@ jobs:
       - name: Build
         run: npm run dist:win
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-  build-mac:
-    runs-on: macos-latest
-    name: Build for MacOS
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Setup NodeJS
-        uses: actions/setup-node@v2
-      - name: Install assets
-        run: npm install
-      - name: Build
-        run: npm run dist:mac
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: 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
